--- a/importer/package.json
+++ b/importer/package.json
@@ -4,6 +4,7 @@
   "dependencies" : {
     "jquery"     : "1.8",
     "mongoose"   : "3.6",
+    "mongodb"    : "1",
     "underscore" : "1.4",
     "moment": "2.0.0" 
   }
