--- a/importer/package.json
+++ b/importer/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "dependencies" : {
     "jquery"     : "1.8",
-    "mongoose"   : "3.6",
+    "mongodb"   : "1.3",
     "underscore" : "1.4",
-    "moment": "2.0.0" 
+    "moment": "2.0",
+    "sleep": "1.1"
   }
 }
