--- a/importer/package.json
+++ b/importer/package.json
@@ -6,6 +6,7 @@
     "mongodb"   : "1.3",
     "underscore" : "1.4",
     "moment": "2.0",
-    "sleep": "1.1"
+    "sleep": "1.1",
+    "async": "0.2"
   }
 }
